--- a/www/css/main.diary.css
+++ b/www/css/main.diary.css
@@ -351,15 +351,17 @@ a.item-content {
 }
 
 .diary-map {
-  z-index: -1; /* Can't zoom in or out of the map with this implemented */
+  height: 100%;
   overflow: hidden;
-  border-radius: 30px 0px 0px 30px;
+  --map-border-radius: 30px 0px 0px 30px;
   /* height must be specified in the html */
 }
 
-/* when trip notes are enabled, the map has rounded right corners */
-.enhanced-trip-item .diary-map {
-  border-radius: 30px 0px 30px 0px;
+/* when trip notes are enabled,
+  the map is shorter and has rounded right corners */
+.diary-map.short {
+  height: 80%;
+  --map-border-radius: 30px 0px 30px 0px;
 }
 
 .diary-map-shell {
