--- a/www/templates/diary/infinite_scroll_list.html
+++ b/www/templates/diary/infinite_scroll_list.html
@@ -5,7 +5,7 @@
         <button class="button button-icon" ng-click="increaseHeight()">
             <i class="icon ion-arrow-resize"></i>
         </button>
-        <div class="row buttons labelfilterlist">
+        <div class="buttons labelfilterlist">
             <button ng-repeat="selF in filterInputs" ng-click="select(selF)" class="{{selF.width}} button labelfilter" ng-class="{on:selF.state}" style="text-align: center;font-size: 13px;font-weight: 600; border-radius: 10px;" translate>
                 {{selF.text}}
             </button>
@@ -33,9 +33,9 @@
 
 		<ion-list>
             <div collection-repeat="entry in data.displayTimelineEntries" item-height="getCardHeight(entry)">
-                <trip-list-item ng-if="entry.start_ts" ng-custom-element ngce-prop-trip="entry"></trip-list-item>
+                <!-- <trip-list-item ng-if="entry.start_ts" ng-custom-element ngce-prop-trip="entry"></trip-list-item> -->
                 <!-- <trip-list-item ng-prop-trip="entry"></trip-list-item> -->
-                <!-- <infinite-scroll-trip-item ng-if="entry.start_ts" trip="entry" config="ui_config"></infinite-scroll-trip-item> -->
+                <infinite-scroll-trip-item ng-if="entry.start_ts" trip="entry" config="ui_config"></infinite-scroll-trip-item>
                 <infinite-scroll-place-item ng-if="showPlaces && entry.enter_ts" place="entry" config="ui_config"></infinite-scroll-place-item>
             </div>
         </ion-list>
