--- a/www/templates/diary/trip_list_item.html
+++ b/www/templates/diary/trip_list_item.html
@@ -1,4 +1,4 @@
-<div ng-class="{'enhanced-trip-item': configTripNotes}">
+<div>
 <!-- New Trip Template format  -->
 
     <ion-item class="unified-diary-item" style="background-color: transparent;" class="list-item">
@@ -9,9 +9,15 @@
         <div class="diary-card">
             <!-- Leaflet Map -->
             <div id="left-diary-card" class="diary-map-shell" ng-click="showDetail($event, trip)">
-                <leaflet class="diary-map" geojson="trip" defaults="mapCtrl.defaults"
+                <div class="diary-map" ng-class="{short: configTripNotes}">
+                    <leaflet-map ng-custom-element
+                        ngce-prop-gj="trip.data" ngce-prop-opts="{zoomControl: false, dragging: false}"
+                        ng-class="{short: configTripNotes}">
+                    </leaflet-map>
+                </div>
+                <!-- <leaflet class="diary-map" geojson="trip" defaults="mapCtrl.defaults"
                     id="$index" data-tap-disabled="true", height="{{mapHeight}}">
-                </leaflet>
+                </leaflet> -->
                 <div ng-if="configTripNotes" class="row" style="height: 20%; padding: 10px">
                     <enketo-add-note-button notes-config="configTripNotes" timeline-entry="trip"
                         datakey="manual/trip_addition_input" style="margin: auto">
