--- a/www/templates/control/main-control.html
+++ b/www/templates/control/main-control.html
@@ -1,10 +1,9 @@
 <ion-view view-title="{{'control.profile' | i18next}}" ng-class="ion-view-background">
   <ion-content>
+
+    <profile-settings settings-scope="this"></profile-settings>
     
     <setting-row text-key="settings.auth.opcode" icon-name="'logout'" action = "logOut"></setting-row>
-
-    <!-- demographics survey -- leaving for now -->
-    <enketo-demographics-button></enketo-demographics-button>
 
     <setting-row text-key="'control.view-privacy'" icon-name="'eye'" action = "viewPrivacyPolicy" is-toggle="false"></setting-row>
     <setting-row text-key="'control.view-qrc'" icon-name="'grid'" action = "viewQRCode" is-toggle="false"></setting-row>
